--- a/html/quiz.html
+++ b/html/quiz.html
@@ -14,8 +14,8 @@
         <section>
             <form id="container-form">
 
-                <article id="question-container1">
-                    <h3>En una película de terror icónica, un depredador acuático amenaza la
+                <article id="question-1">
+                    <h3>1. En una película de terror icónica, un depredador acuático amenaza la
                         tranquilidad de un pueblo costero. ¿Cuál es el nombre de esta película?</h3>
                     <label><input type="radio" value="1" name="p0">Los Otros</label>
                     <label><input type="radio" value="2" name="p0">Tiburón</label>
@@ -24,8 +24,8 @@
                 </article>
 
 
-                <article id="question-container2">
-                    <h3>¿Cuál es la película de terror en la que un grupo de amigos viaja a una
+                <article id="question-2">
+                    <h3>2. ¿Cuál es la película de terror en la que un grupo de amigos viaja a una
                         cabaña en el bosque y se enfrenta a amenazas sobrenaturales?</h3>
                     <label><input type="radio" value="1" name="p1">El conjuro</label>
                     <label><input type="radio" value="2" name="p1">El exorcista</label>
@@ -34,8 +34,8 @@
                 </article>
 
 
-                <article id="question-container3">
-                    <h3>En la película Pesadilla en Elm Street, ¿cuál es el nombre del famoso
+                <article id="question-3">
+                    <h3>3. En la película Pesadilla en Elm Street, ¿cuál es el nombre del famoso
                         asesino
                         de sueños que acecha a los jóvenes en sus pesadillas?</h3>
                     <label> <input type="radio" value="1" name="p3">Jason Voorhees</label>
@@ -44,8 +44,8 @@
                     <label><input type="radio" value="4" name="p3">Leatherfac</label>
                 </article>
 
-                <article id="question-container4">
-                    <h3>¿Cuál es la película de terror en la que una niña gira la cabeza 360
+                <article id="question-4">
+                    <h3>4. ¿Cuál es la película de terror en la que una niña gira la cabeza 360
                         grados y
                         vomita un líquido verde?</h3>
                     <label><input type="radio" value="1" name="p4">El Exorcista</label>
@@ -54,8 +54,8 @@
                     <label><input type="radio" value="4" name="p4">Saw</label>
                 </article>
 
-                <article id="question-container5">
-                    <h3>En la película de terror 'El Resplandor', ¿cuál es el nombre del hotel
+                <article id="question-5">
+                    <h3>5. En la película de terror 'El Resplandor', ¿cuál es el nombre del hotel
                         aislado en el que se desarrolla la historia?</h3>
                     <label><input type="radio" value="1" name="p5">Hotel Estrella</label>
                     <label><input type="radio" value="2" name="p5">Hotel Solitario</label>
@@ -64,8 +64,8 @@
                 </article>
 
 
-                <article id="question-container6">
-                    <h3>En la película de terror The Ring, ¿qué sucede cuando alguien ve una
+                <article id="question-6">
+                    <h3>6. En la película de terror The Ring, ¿qué sucede cuando alguien ve una
                         misteriosa cinta de video?</h3>
                     <label><input type="radio" value="1" name="p6">Reciben una llamada telefónica</label>
                     <label><input type="radio" value="2" name="p6">Comienzan a ver espíritus</label>
@@ -73,8 +73,8 @@
                     <label><input type="radio" value="4" name="p6">Obtienen poderes sobrenaturales</label>
                 </article>
 
-                <article id="question-container7">
-                    <h3>¿Cuál es la película de terror en la que una familia se muda a una casa
+                <article id="question-7">
+                    <h3>7. ¿Cuál es la película de terror en la que una familia se muda a una casa
                         encantada en Long Island, Nueva York, y es aterrorizada por fenómenos paranormales?</h3>
                     <label><input type="radio" value="1" name="p7">Annabelle</label>
                     <label><input type="radio" value="2" name="p7">La Llorona</label>
@@ -82,8 +82,8 @@
                     <label><input type="radio" value="4" name="p7">Actividad Paranormal</label>
                 </article>
 
-                <article id="question-container8">
-                    <h3>En la película de terror Scream, ¿cuál es el icónico disfraz que usa el
+                <article id="question-8">
+                    <h3>8. En la película de terror Scream, ¿cuál es el icónico disfraz que usa el
                         asesino para aterrorizar a sus víctimas?</h3>
                     <label><input type="radio" value="1" name="p8">Máscara de payaso</label>
                     <label><input type="radio" value="2" name="p8">Máscara de lobo</label>
@@ -91,8 +91,8 @@
                     <label><input type="radio" value="4" name="p8">Máscara de bruja</label>
                 </article>
 
-                <article id="question-container9">
-                    <h3>¿Cuál es la película de terror en la que un grupo de adolescentes se
+                <article id="question-9">
+                    <h3>9. ¿Cuál es la película de terror en la que un grupo de adolescentes se
                         enfrenta
                         a un asesino enmascarado en un campamento de verano?</h3>
                     <label><input type="radio" value="1" name="p9">Viernes 13</label>
@@ -101,8 +101,8 @@
                     <label><input type="radio" value="4" name="p9">The Ring</label>
                 </article>
 
-                <article id="question-container10">
-                    <h3>En la película de terror Poltergeist, ¿qué objeto se desliza por el suelo
+                <article id="question-10">
+                    <h3>10. En la película de terror Poltergeist, ¿qué objeto se desliza por el suelo
                         y
                         atrae la atención de la niña Carol Anne?</h3>
                     <label><input type="radio" value="1" name="p10">Una muñeca diabólica</label>
